# IGT_net

./: .gitignore  README
analysis/: add_new_sub.r  igt_analysis.r
analysis/report/: method.tex
analysis/script/: .RData  .Rhistory  Friedman-Test-with-Post-Hoc.r  add_new_sub.r  bn_feature_visualizer.r  bn_simple_model.r  dbhat.r  edit_sub.r  iccs2013.r  igt_analysis.r  igt_mri.m  js_sample_subject.r  js_subject_clusters.r  js_variance_in_horstmann.r  plot_personality.r  poster.r  poster_clusters.r  total_diff_reward.r
cards/: card_back.odt  card_front.odt
cards/all_back_main/: back_01.odt  (+31 more)
igt_client/: Makefile  clientthread.cpp  clientthread.h  igt_client  igt_client.pro  igtscreen.cpp  igtscreen.h  igtscreen.ui  igtsubject.cpp  igtsubject.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_clientthread.cpp  moc_igtscreen.cpp  moc_mainwindow.cpp  ui_igtscreen.h  ui_mainwindow.h
igt_psychtoolbox/: ca  get_response.m  get_reward_punish.m  igt_mri.m  igt_orig.m  resp_test.m  show_decks.m  show_rewards_bar.m  test_triger.m  testnewresponceboxwithtriger.m
igt_server/: CMakeLists.txt  README  framegrabber.cpp  framegrabber.h  scoresender.cpp  scoresender.h  sender.cpp  sender.h  stream_client.c  stream_server.c  webcam_stream.cpp
igt_server/.kdev4/: igt_server.kdev4
igt_server/test/: a.out  qpixmap_usage_test.cpp
igt_server/test/qiamge/: CMakeLists.txt  sender.cpp
igt_server/test/qiamge/sender/: Makefile  client1  main.cpp  moc_recv.cpp  moc_sender.cpp  recv.cpp  recv.h  sender  sender.cpp  sender.h  sender.pro
psych/: task_intro.tex
questionnaires/: task_intro.tex
(+66 files in other folders)
